--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "PyWMD"]
-	path = PyWMD
-	url = https://github.com/REDxEYE/PyWMD
+[submodule "PyPragma"]
+	path = PyPragma
+	url = https://github.com/REDxEYE/PyPragma
